--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,20 +7,26 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.GamesApplication"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.singleGmae"></activity>
-        <activity android:name=".Activity.SingUp" />
-        <activity android:name=".Activity.login">
+        <activity android:name=".Activity.MainActivity">
+
+		</activity>
+        <activity android:name=".Activity.GamesDashborad">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Activity.singleGmae" />
+        <activity android:name=".Activity.SingUp" />
+        <activity android:name=".Activity.login">
+            
         </activity>
 
         <provider
@@ -34,11 +40,10 @@
                 android:resource="@xml/picker_provider_paths" />
         </provider>
 
-        <activity android:name=".utlit.userProfile" />
         <activity android:name=".Activity.EditGameActivity" />
         <activity android:name=".Activity.AddGamesActivity" />
-        <activity android:name=".Activity.GamesDashborad" />
-        <activity android:name=".Activity.MainActivity" />
+
+        <activity android:name=".Activity.dashboard" />
     </application>
 
 </manifest>
