--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     }
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation'com.github.ome450901:SimpleRatingBar:1.5.0'
 
 
 }
