--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,32 +7,23 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo"
+        android:icon="@drawable/pc"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo"
+        android:roundIcon="@drawable/pc"
         android:supportsRtl="true"
         android:theme="@style/Theme.GamesApplication"
         android:usesCleartextTraffic="true">
-<<<<<<< HEAD
-        <activity android:name=".Activity.singleGmae" />
+        <activity android:name=".Activity.AddServey"></activity>
+        <activity android:name=".Activity.SingleGame" />
         <activity android:name=".Activity.SingUp" />
-        <activity android:name=".Activity.login">
-=======
-        <activity android:name=".Activity.MainActivity">
-
-		</activity>
+        <activity android:name=".Activity.login" />
+        <activity android:name=".Activity.MainActivity"></activity>
         <activity android:name=".Activity.GamesDashborad">
->>>>>>> 908d33e5b2f7dbe7759e1ae08df26f4133c66b7e
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".Activity.singleGmae" />
-        <activity android:name=".Activity.SingUp" />
-        <activity android:name=".Activity.login">
-            
         </activity>
 
         <provider
@@ -48,7 +39,6 @@
 
         <activity android:name=".Activity.EditGameActivity" />
         <activity android:name=".Activity.AddGamesActivity" />
-
         <activity android:name=".Activity.dashboard" />
     </application>
 
